# deeprules

./: .gitignore  README.md  pyproject.toml  reg_ruleset.json
deeprules/: __init__.py  _helpers.py  _induction.py  _model.py  _params.py  _simplify.py  _timing.py  cache.py  conditions.py  quality.py
deeprules/classification/: __init__.py
deeprules/classification/cnf/: __init__.py  _induction.py  _model.py
deeprules/classification/dnf/: __init__.py  _induction.py  _model.py  _params.py
deeprules/classification/mixed/: __init__.py  _helpers.py  _induction.py  _model.py  _params.py
deeprules/conditions_induction/: __init__.py  _base.py  attributes_relations.py  generator.py  plain.py  weights.py
deeprules/regression/: __init__.py
deeprules/regression/cnf/: __init__.py  _induction.py  _model.py  _params.py
deeprules/regression/dnf/: __init__.py  _induction.py  _model.py
deeprules/regression/mixed/: __init__.py  _helpers.py  _induction.py  _model.py  _params.py
deeprules/survival/: __init__.py  _helpers.py  _kaplan_meier.py
deeprules/survival/cnf/: __init__.py  _induction.py  _model.py  _params.py
deeprules/survival/dnf/: __init__.py  _induction.py  _model.py  _params.py
deeprules/survival/mixed/: __init__.py  _helpers.py  _induction.py  _model.py  _params.py
docs/source/: conf.py  index.rst
notebooks/: plot_coverage.py  syntetic.csv
tests/: test_classification.py  test_regression.py  test_survival.py  utils.py
tests/datasets/classification/heart-c/: description.txt  test.csv  train.csv
tests/datasets/regression/cholesterol/: description.txt  test.csv  train.csv
tests/datasets/survival/mgus/: description.txt  test.csv  train.csv
tests/json/: heart_c_ruleset.json  reg_ruleset.json  surv_ruleset.json
