[project]
authors = [
  {name = "cezary.maszczyk", email = "cezary.maszczyk@emag.lukasiewicz.gov.pl"},
]
dependencies = [
  "decision-rules>=1.4.1",
]
description = "Rule induction algorithm capable of learning mixed CNF and DNF rules."
name = "deeprules"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.hatch.build.targets.wheel]
packages = ["deeprules"]

[project.optional-dependencies]
test = [
  "pytest==8.3.5",
]
dev = [
  "pre-commit==4.2.0",
]
