[project]
authors = [
  {name = "cezary.maszczyk", email = "cezary.maszczyk@emag.lukasiewicz.gov.pl"},
]
dependencies = [
  "decision-rules>=1.4.1",
]
description = "Rule induction algorithm capable of learning mixed CNF and DNF rules."
name = "deeprules"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.hatch.build.targets.wheel]
packages = ["deeprules"]

[project.optional-dependencies]
dev = [
  "pre-commit==4.2.0",
]
docs = [
  "Sphinx==7.2.6",
  "sphinx-rtd-theme==2.0.0",
  "pandoc~=2.3",
  "sphinx-autoapi==3.6.0"
]
test = [
  "pytest==8.3.5",
]
